k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notflix
  namespace: notflix
spec:
  selector:
    app: notflix
  ports:
    - name: http
      port: 80
      targetPort: 43212
      protocol: TCP
  type: ClusterIP
